system/s3-gateway-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-s3-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-s3-gateway
  template:
    metadata:
      labels:
        app: nginx-s3-gateway
    spec:
      containers:
        - name: nginx-s3-gateway
          image: nginxinc/nginx-s3-gateway:latest-njs-oss-20250709
          ports:
            - containerPort: 80
