system/s3-gateway-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-s3-gateway
  labels:
    app: nginx-s3-gateway
spec:
  selector:
    app: nginx-s3-gateway
  ports:
    - protocol: TCP
      port: 80
  type: ClusterIP
